k8s/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: secure-gateway-svc 
spec:
  type: NodePort # 方便本地测试，云上通常用 LoadBalancer
  selector:
    app: gateway
  ports:
    - port: 80  # 集群内部访问端口
      targetPort: 8080 # 容器里的网关端口
      nodePort: 30080 # 暴露给你本机的外部端口 (访问 localhost:30080)
